[package]
name = "csci-485-project-3"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Thompson", "Simeon Sledge", "LaQuawne DePriest"]

[features]
sudoer = []

[[bin]]
name = "csci-485-project-3"
path = "src/main.rs"

[lib]
name = "libproj3"
path = "src/lib.rs"

[dependencies]
rust_search = "2.1.0"
reqwest = { version = "0.12.*", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
regex-syntax = "0.8.3"
dirs = "5.0.1"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
regex = "1.10.4"

[profile.release]
lto="thin"

[profile.bench]
lto="thin"

[profile.dev.package."*"]
opt-level = 1
debug-assertions = true # just in case
overflow-checks = false
incremental = false

[profile.test.package."*"]
opt-level = 1
debug-assertions = true # just in case
overflow-checks = false
incremental = false
