[package]
name = "csci-485-project-3"
version = "1.0.0"
edition = "2021"
authors = ["Nicholas Thompson", "Simeon Sledge", "LaQuawne DePriest"]
readme = true
license = "MIT OR Apache-2.0"
description = "A malicious script to find, decrypt, and send a file"
repository = "https://github.com/NCGThompson/csci-485-project-3"

[features]
default = ["sudoer"]
sudoer = [] # searches whole computer

[[bin]]
name = "csci-485-project-3"
path = "src/main.rs"

[lib]
name = "libproj3"
path = "src/lib.rs"

[dependencies]
rust_search = "2.1.0"
regex-syntax = "0.8.3"
dirs = "5.0.1"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
ureq = { version = "2.9.6", default-features = false, features = ["json"] }

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
regex = "1.10.4"

[profile.release]
lto="fat"
codegen-units = 1
strip = true
panic = "abort" # We mostly use results anyway

[profile.dev.package."*"]
opt-level = 1
debug-assertions = true # just in case
overflow-checks = false
incremental = false
